<resources>
    <string name="app_name">Serbajualan</string>

    <!-- Facebook -->
    <string name="facebook_app_id">2007601859483407</string>
    <string name="fb_login_protocol_scheme">fb2007601859483407</string>



    <!-- Common Section -->
    <string name="done">Done</string>
    <string name="content_description">Image</string>
    <string name="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis congue justo eleifend, tristique risus sed, volutpat urna. Donec vestibulum lacus ut odio viverra</string>

    <!-- Login section -->
    <string name="sign_in_logo">Logo</string>
    <string name="sign_in_username">Username</string>
    <string name="sign_in_password">Password</string>
    <string name="sign_in_remember">Remember Password</string>
    <string name="sign_in_forget">Forget Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_or">Or</string>
    <string name="sign_in_facebook">Sign in with Facebook</string>
    <string name="sign_in_join">Belum punya akun? Daftar Sekarang!</string>

    <!-- Sign up Section -->
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_email">E-mail</string>
    <string name="sign_up_terms">I agree with terms &amp; conditions</string>
    <string name="sign_up_login">Sudah punya akun? Login Sekarang!</string>

    <!-- Navigation Drawer -->
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Navigation Header -->
    <string name="header1">Wishlist</string>
    <string name="header2">Cart</string>
    <string name="header3">Cards</string>

    <!-- Profil Activity -->
    <string name="profil_sell">Jual Barang</string>
    <string name="title_activity_example">ExampleActivity</string>
    <string name="title_activity_menu">MenuActivity</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="search_label_recent">Recent Searches</string>
    <string name="search_label_trending">Trending Searches</string>
    <string name="search_label_result">Showing 1000+ results for </string>
    <string name="search_button_edit">Edit</string>
    <string name="search_widget_hint">Cari Produk &amp; Brand</string>
    <string name="search_widget_transition">sw_transition</string>
    <string name="search_option_speech">Speech</string>
    <string name="search_option_camera">Camera</string>

    <string name="sponsored_ads">Sponsored Ads</string>

    <string name="product_transition">p_transition</string>
    <string name="product_sort">Urutkan</string>
    <string name="product_filter">Grupkan</string>
    <string name="product_dialog_relevance">Relevan</string>
    <string name="product_dialog_popularity">Populer</string>
    <string name="product_dialog_cheapest">Harga: Murah ke Mahal</string>
    <string name="product_dialog_expensive">Harga: Mahal ke Murah</string>
    <string name="product_dialog_discount">Diskon</string>
    <string name="product_dialog_latest">Terbaru</string>

    <string name="details_label_moreqanda">Lihat Semua Q&amp;A</string>
    <string name="details_label_qanda">Question &amp; Answers</string>

    <!-- Settings -->
    <string name="account_label_protection">Data kamu selalu dirahasiakan dan tidak akan kami beritahukan kepada pihak ketiga</string>
    <string name="account_button_done">Simpan</string>
</resources>
