<?xml version="1.0" encoding="utf-8"?><!-- fragment_edit_name.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/padding_normal">

    <CustomComponents.TextViewSemiBold
        android:id="@+id/title"
        style="@style/AppTheme.TextViewH1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_vertical_small"
        android:layout_marginBottom="@dimen/margin_vertical_small"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/relevance"
            style="@style/AppTheme.TextViewH5.Grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_dialog_relevance"/>
        <RadioButton
            android:id="@+id/popularity"
            style="@style/AppTheme.TextViewH5.Grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_dialog_popularity"/>
        <RadioButton
            android:id="@+id/cheapest"
            style="@style/AppTheme.TextViewH5.Grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_dialog_cheapest"/>
        <RadioButton
            android:id="@+id/expensive"
            style="@style/AppTheme.TextViewH5.Grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_dialog_expensive"/>
        <RadioButton
            android:id="@+id/discount"
            style="@style/AppTheme.TextViewH5.Grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_dialog_discount"/>
        <RadioButton
            android:id="@+id/latest"
            style="@style/AppTheme.TextViewH5.Grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_dialog_latest"/>
    </RadioGroup>
</LinearLayout>