<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/sign_in_vertical_margin"
    android:paddingLeft="@dimen/sign_in_horizontal_margin"
    android:paddingRight="@dimen/sign_in_horizontal_margin"
    android:paddingTop="@dimen/sign_in_vertical_margin"
    android:background="@drawable/sign_in_background"
    tools:context=".SignInActivity">

    <ImageView
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/sign_in_logo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">
        <CustomComponents.FacebookButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/facebook_logo"
            android:drawableLeft="@drawable/facebook_logo"
            android:text="@string/sign_in_facebook"/>

        <CustomComponents.TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_or"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/sign_in_row"/>

        <CustomComponents.EditText
            android:id="@+id/mUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            android:paddingTop="24dp"
            android:paddingBottom="24dp"
            android:hint="@string/sign_in_username"
            android:drawableStart="@drawable/username"
            android:drawableLeft="@drawable/username"
            android:drawablePadding="8dp"
            android:inputType="textPersonName"/>

        <CustomComponents.EditText
            android:id="@+id/mPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            android:paddingTop="24dp"
            android:paddingBottom="24dp"
            android:hint="@string/sign_in_password"
            android:drawableStart="@drawable/password"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="8dp"
            android:inputType="textPassword"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="36dp">
            <CheckBox
                android:id="@+id/mRemember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>
            <CustomComponents.TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/mRemember"
                android:layout_toEndOf="@+id/mRemember"
                android:layout_centerVertical="true"
                android:textSize="12sp"
                android:text="@string/sign_in_remember"/>
            <CustomComponents.TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_forget"
                android:textSize="12sp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>

        <CustomComponents.RoundedButton
            android:id="@+id/mLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"/>

        <CustomComponents.TextView
            android:id="@+id/mJoin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/cWhite"
            android:text="@string/sign_in_join"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"/>

    </LinearLayout>

</RelativeLayout>
