<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:padding="16dp"
        android:background="@color/c1">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/mProfilePict"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@color/cBlack"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <CustomComponents.TextView
            android:id="@+id/mUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/mSetting"
            android:layout_toLeftOf="@+id/mSetting"
            android:layout_toRightOf="@+id/mProfilePict"
            android:layout_toEndOf="@+id/mProfilePict"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_centerVertical="true"
            android:textColor="@color/cWhite"
            android:text="@string/app_name"
            />

        <ImageView
            android:id="@+id/mSetting"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/content_description"
            android:src="@drawable/settings"
            android:tint="@android:color/white"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/c1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="24dp"
        android:paddingBottom="16dp"
        android:background="@color/c2"
        android:gravity="center">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/padding_big_menu"
            android:paddingLeft="@dimen/padding_big_menu"
            android:paddingTop="@dimen/padding_big_menu_vertical"
            android:paddingBottom="@dimen/padding_big_menu_vertical"
            android:orientation="vertical">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_wishlist_black_24dp"
                android:tint="@color/c3"
                android:contentDescription="@string/content_description"
                android:layout_gravity="center_horizontal"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"/>
            <CustomComponents.TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/header1"/>
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/c3"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/padding_big_menu"
            android:paddingLeft="@dimen/padding_big_menu"
            android:paddingTop="@dimen/padding_big_menu_vertical"
            android:paddingBottom="@dimen/padding_big_menu_vertical"
            android:orientation="vertical">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/cart"
                android:tint="@color/c3"
                android:contentDescription="@string/content_description"
                android:layout_gravity="center_horizontal"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"/>
            <CustomComponents.TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/header2"/>
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/c3"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/padding_big_menu"
            android:paddingLeft="@dimen/padding_big_menu"
            android:paddingTop="@dimen/padding_big_menu_vertical"
            android:paddingBottom="@dimen/padding_big_menu_vertical"
            android:orientation="vertical">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/card"
                android:tint="@color/c3"
                android:contentDescription="@string/content_description"
                android:layout_gravity="center_horizontal"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"/>
            <CustomComponents.TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/header3"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
