<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.endrawan.marketplace.SettingAccountFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="164dp">

        <ImageView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/content_description"
            android:src="@color/cBlue" />

        <ImageView
            android:id="@+id/changeBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:layout_margin="@dimen/margin_normal"
            android:contentDescription="@string/content_description"
            android:src="@drawable/ic_edit_black_16dp"
            android:tint="@color/cWhite" />


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profilePic"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_gravity="center"
            android:src="@color/cBackgroundGrey" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/changeProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:padding="@dimen/padding_small"
            android:scaleType="center"
            android:src="@drawable/ic_edit_black_16dp"
            android:tint="@color/cWhite"
            app:elevation="0dp"
            app:fabSize="mini" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cWhite"
        android:orientation="vertical">

        <include
            android:id="@+id/name"
            layout="@layout/view_text_form" />

        <include
            android:id="@+id/born"
            layout="@layout/view_text_form" />

        <include
            android:id="@+id/gender"
            layout="@layout/view_text_form" />

        <include
            android:id="@+id/description"
            layout="@layout/view_text_form" />

        <include
            android:id="@+id/note"
            layout="@layout/view_text_form" />

        <CustomComponents.TextView
            style="@style/AppTheme.TextViewH6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:paddingLeft="@dimen/padding_horizontal_normal"
            android:paddingRight="@dimen/padding_horizontal_normal"
            android:paddingTop="@dimen/padding_vertical_normal"
            android:text="@string/account_label_protection" />

        <CustomComponents.Button
            android:id="@+id/submit"
            style="@style/AppTheme.Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:gravity="center"
            android:padding="@dimen/padding_normal"
            android:text="@string/account_button_done"
            android:textAppearance="@style/AppTheme.TextViewH3.Light" />
    </LinearLayout>

</LinearLayout>
